Config pom.xml with dependices(javafx) + fix bugs