@@ -6,15 +6,14 @@ import java.awt.Point;
 import java.util.ArrayList;
 import java.util.List;
 
-
 public class Vehicle {
     private static int id = 0;
     private final int vehicleId;
     private final Point destination;
     private Point position;
     private int speed;
-    public List<Point> path = new ArrayList<>();
-    public boolean Calculated = false;
+    private List<Point> path = new ArrayList<>();
+    private boolean calculated = false;
 
     public Vehicle(Point destination, Point position, int speed) {
         this.destination = destination;
@@ -23,15 +22,19 @@ public class Vehicle {
         vehicleId = ++id;
         this.path.add(position);
     }
+
     public Point getDestination() {
         return destination;
     }
+
     public Point getPosition() {
         return position;
     }
+
     public int getSpeed() {
         return speed;
     }
+
     public int getVehicleId() {
         return vehicleId;
     }
@@ -44,20 +47,18 @@ public class Vehicle {
         this.position = position;
     }
 
-    public void addPointToPath( Point p) {
+    public void addPointToPath(Point p) {
         this.path.add(p);
     }
+
     public void removePointFromPath(Point p) {
         this.path.remove(p);
     }
 
-
-
-    public void Calulate_Next_point(Map map){
-        Point current = path.getLast();
+    public void calculateNextPoint(Map map) {
+        Point current = path.get(path.size() - 1);
         System.out.println(path.size());
         Point destination = this.getDestination();
-        //compare all neighbors of current position and return the one that is closest to destination
         List<Point> neighbors = new ArrayList<>();
         neighbors.add(new Point(current.x + 1, current.y));
         neighbors.add(new Point(current.x - 1, current.y));
@@ -66,27 +67,23 @@ public class Vehicle {
 
         Point closest = null;
         double minDistance = Integer.MAX_VALUE;
-        for(Point neighbor : neighbors){
-
-            //if one of the neighbors is the destination, set it as the next position
-            if(neighbor.x == destination.x && neighbor.y == destination.y){
+        for (Point neighbor : neighbors) {
+            if (neighbor.x == destination.x && neighbor.y == destination.y) {
                 addPointToPath(neighbor);
                 System.out.println("Calculated Path");
-                Calculated = true;
+                calculated = true;
                 return;
             }
 
-            //check if neighbor is valid road in the map
-
-            if(neighbor.x < 0 || neighbor.y < 0 || neighbor.x >= map.height|| neighbor.y >= map.width){
+            if (neighbor.x < 0 || neighbor.y < 0 || neighbor.x >= map.height || neighbor.y >= map.width) {
                 continue;
             }
-            if(map.grille[neighbor.x][neighbor.y] ==0){
+            if (map.grille[neighbor.x][neighbor.y] == 0) {
                 continue;
             }
 
             double distance = getDistance(neighbor, destination);
-            if(distance < minDistance){
+            if (distance < minDistance) {
                 minDistance = distance;
                 closest = neighbor;
             }
@@ -95,8 +92,15 @@ public class Vehicle {
         addPointToPath(closest);
     }
 
-    private double getDistance(Point a, Point b){
-        //euclidean distance
+    private double getDistance(Point a, Point b) {
         return Math.sqrt(Math.pow(a.x - b.x, 2) + Math.pow(a.y - b.y, 2));
+    }
+
+    public List<Point> getPath() {
+        return path;
+    }
+
+    public boolean isCalculated() {
+        return calculated;
     }
 }
